src/testFunctional/testData/org/intellij/xquery/annotator/duplicateFunction/TwoFunctions.xq
<error descr="'test' is already defined in 'TwoFunctions.xq'">declare function local:test()</error> {
    ""
};

<error descr="'test' is already defined in 'TwoFunctions.xq'">declare function local:test()</error> {
    "anyString"
};

()